--- a/scss/modules/layout/_mixins.scss
+++ b/scss/modules/layout/_mixins.scss
@@ -2,6 +2,17 @@
 // Layout Mixins and Functions
 // ===========================
 
+@mixin clearfix() {
+    &:before, &:after {
+        content: " ";
+        display: table;
+    }
+
+    &:after {
+        clear: both;
+    }
+}
+
 @mixin overlap(
     $horizontal: false,
     $vertical: false,
