--- a/scss/modules/lighting/_components.scss
+++ b/scss/modules/lighting/_components.scss
@@ -3,25 +3,25 @@
 // ===================
 
 %shadow {
-    @include box-shadow($shadow-default);
+    box-shadow: $shadow-default;
 }
 
 %shadow-1 {
-    @include box-shadow($shadow-1);
+    box-shadow: $shadow-1;
 }
 
 %shadow-2 {
-    @include box-shadow($shadow-2);
+    box-shadow: $shadow-2;
 }
 
 %shadow-3 {
-    @include box-shadow($shadow-3);
+    box-shadow: $shadow-3;
 }
 
 %shadow-4 {
-    @include box-shadow($shadow-4);
+    box-shadow: $shadow-4;
 }
 
 %shadow-5 {
-    @include box-shadow($shadow-5);
+    box-shadow: $shadow-5;
 }
