--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -1,10 +1,10 @@
 // Compass imports
 // @import "compass/reset";
-@import "compass/utilities/general/clearfix";
-@import "compass/css3/box-sizing";
-@import "compass/css3/box-shadow";
+// @import "compass/utilities/general/clearfix";
+// @import "compass/css3/box-sizing";
+// @import "compass/css3/box-shadow";
 @import "compass/css3/shared";
-@import "compass/css3/border-radius";
+// @import "compass/css3/border-radius";
 @import "compass/css3/transition";
 @import "compass/css3/transform";
 @import "compass/css3/flexbox";
