--- a/scss/modules/layers/_mixins.scss
+++ b/scss/modules/layers/_mixins.scss
@@ -47,7 +47,7 @@
                 }
 
                 ~ * {
-                    @include transform($push-translation);
+                    transform: $push-translation;
                 }
             }
 
