--- a/scss/modules/type/_components.scss
+++ b/scss/modules/type/_components.scss
@@ -112,7 +112,7 @@
     text-rendering: optimizeLegibility;
     word-wrap: break-word;
 
-    @include experimental(hyphens, auto);
+    hyphens: auto;
 }
 
 %paragraph {
