--- a/scss/modules/grid/_components.scss
+++ b/scss/modules/grid/_components.scss
@@ -266,7 +266,7 @@
 
 		%row-center#{$suffix}, %rows-center#{$suffix} > * { 
 			top: 50%;
-			@include transform(translateY(-50%));
+			transform: translateY(-50%);
 		}
 	}
 }
