--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -16,7 +16,7 @@ $type-base-font-weight: 300 !default;
 // Custom Type Settings
 $type-use-custom: true !default;
 $type-import-primary: "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" !default;
-$type-import-secondary: "//fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic,300,700)" !default;
+$type-import-secondary: "//fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic,300,700" !default;
 $type-imports: (
     $type-import-primary,
     $type-import-secondary
