Removing compass completely, adding ruby-sass to gulp file

--- a/docs/views/type.html
+++ b/docs/views/type.html
@@ -1,5 +1,16 @@
 <h1>Type Module</h1>
 
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit aut animi id, aliquam dolorem eligendi. Praesentium perferendis asperiores qui, quidem culpa recusandae, est, molestias laboriosam illum possimus nostrum ut architecto.</p>
+<h3>Hello</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum placeat facilis possimus? Magnam consequatur ullam officia iste sequi, minima repudiandae aliquid facilis cumque assumenda cupiditate quod, molestias tempora alias ipsa!</p>
+
+
 <div class="panel">
     <header>Type Rules</header>
     <section>
