--- a/scss/modules/global/_mixins.scss
+++ b/scss/modules/global/_mixins.scss
@@ -126,3 +126,22 @@
     @return column-width($rows...);
 }
 
+@function pow($number, $exp) {
+    $value: 1;
+    
+    @if $exp > 0 {
+        // If the exponent is positive, multiply.
+        @for $i from 1 through $exp {
+           $value: $value * $number;
+        }
+    }
+    @else if $exp < 0 {
+        // If the exponent is negative, divide.
+        @for $i from 0 through -$exp {
+            $value: $value / $number;
+        }
+    }
+
+    @return $value;
+}
+
