--- a/scss/modules/media/_module.scss
+++ b/scss/modules/media/_module.scss
@@ -7,6 +7,7 @@ $mq-aspect-ratio: 16/9 !default;
 $mq-static-width: 960px !default;
 $mq-static-height: $mq-static-width/$mq-aspect-ratio !default;
 $mq-unit: em !default;
+$mq-type-base-font-size: 16px !default;
 
 // Horizontal Media Breakpoints
 $mq-breakpoint-small: 767px !default;
