--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -1,5 +1,3 @@
-// Compass imports
-@import "compass/css3/flexbox";
 
 // Units
 $x: 16px !default;
@@ -20,8 +18,8 @@ $grid-row-gutter: $x !default;
 
 // Typography Settings
 $type-unit: rem !default;
-$type-ratio: 1/1.1614 !default;
-$type-base-font-size: 16px !default; // = 1em
+// $type-ratio: 1/1.1614 !default;
+// $type-base-font-size: 16px !default; // = 1em
 $type-base-line-height: 1.65em !default;
 $type-base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $type-base-font-style: normal !default;
@@ -81,14 +79,14 @@ $breakpoint-large: 1280px !default;
 $breakpoint-short: 700px !default;
 $breakpoint-tall: 900px !default;
 
-// Horizontal Media Queries
-$mq-small: "only screen and (max-width: #{$breakpoint-small / $type-base-font-size}em)" !default;
-$mq-medium: "only screen and (min-width: #{$breakpoint-medium / $type-base-font-size}em)" !default;
-$mq-large: "only screen and (min-width: #{$breakpoint-large / $type-base-font-size}em)" !default;
+// // Horizontal Media Queries
+// $mq-small: "only screen and (max-width: #{$breakpoint-small / $type-base-font-size}em)" !default;
+// $mq-medium: "only screen and (min-width: #{$breakpoint-medium / $type-base-font-size}em)" !default;
+// $mq-large: "only screen and (min-width: #{$breakpoint-large / $type-base-font-size}em)" !default;
 
-// Vertical Media Queries
-$mq-short: "only screen and (max-height: #{$breakpoint-short / $type-base-font-size}em)" !default;
-$mq-tall: "only screen and (min-width: #{$breakpoint-tall / $type-base-font-size}em)" !default;
+// // Vertical Media Queries
+// $mq-short: "only screen and (max-height: #{$breakpoint-short / $type-base-font-size}em)" !default;
+// $mq-tall: "only screen and (min-width: #{$breakpoint-tall / $type-base-font-size}em)" !default;
 
 // Non-dimensional Media Queries
 $mq-print: "print" !default;
